src/css/style.css
/*
CSS controls the styling of the page.
You can write a color in directly, or use variables.
Try changing the color from blue to red in the
primary color variable below.
*/

/*
CSS doesn't allow variables to be used in media
queries just yet, but you can use these values
to help you out.

	--size-xs: 320px;
	--size-sm: 480px;
	--size-md: 768px;
	--size-lg: 1024px;
	--size-xl: 1200px;
*/

/* This uses the same value as --size-xs. */
/*@media screen and (width >= 320px) {
	.content-container {
		margin: 0 auto;
		max-width: 768px;
	}
}
*/

/*Fonts*/
@font-face {
	font-family: 'CooperHewitt';
	src: url("../fonts/CooperHewitt-Book.otf") format('opentype');
	font-weight: 400;
}

@font-face {
	font-family: 'CooperHewitt';
	src: url("../fonts/CooperHewitt-Light.otf") format('opentype');
	font-weight: 300;
}

.reset-style, .reset-style * {
	all: revert;
}

body {
	all: revert;
	margin: 0;
}


/* Main page */
html {
	background-color: black;
}

.top-nav {
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: absolute;
	width: 97%;
	height: 5%;
	overflow: hidden;
	top: 0;
	padding-top: 0.9%;
	padding-bottom: 0.6%;
	padding-left: 1.5%;
	padding-right: 1.5%;
	z-index: 10;
	background-color: black;
}

.top-nav a {
	font-family: "henriette-compressed", serif;
	font-style: italic;
	color: white;
	text-decoration: none;
}

.top-nav a:hover {
	color: #FF00FF;
}

.full-list-link {
	margin-left: auto;
}

.top-nav::after {
	content: '';
	position: absolute;
	left: 0;
	right: 0;
	bottom: 0;
	height: 1px;
	background-color: #fff;
}

body {
	position: relative;
	font-family: 'CooperHewitt', sans-serif;
	font-weight: 300;
	color: #fff;
}

h1 {
	font-family: 'CooperHewitt', sans-serif;
	font-weight: 400;
	font-size: 62px;
}

h2 {
	font-size: 24px;
}

.content-container {
	display: flex;
	flex-direction: row;
	height: 100vh;

}

.page-section {
	font-family: 'CooperHewitt', sans-serif;
	width: 50%;
	padding-left: 2%;
	margin: auto;
	align-items: center;

}

.landing-title {
	padding-right: 4%;
}

.landing-subhead {
	font-family: 'CooperHewitt', sans-serif;
	font-weight: 300;
	color: #fff;
}

button {
	font-family: "henriette-compressed", serif;
	font-weight: 400;
	font-style: italic;
	font-size: 14px;
	color: white;
	border-width: 1px;
	border-style: solid;
	border-radius: 8px;
	border-color: white;
	padding: 5px 14px;
	background-color: black;
}

button:hover {
	color:black;
	background-color: white;
}

.panel {
	padding: 0 18px;
	max-height: 0;
	overflow: hidden;
	transition: 0.2s ease-out;
 }

 .accordion {
	width: 100%;
 }

 .accordion-item {
	margin-bottom: .5%;
 }

 .accordion-header {
	font-family: "henriette-compressed", serif;
	font-weight: 400;
	font-style: italic;
	font-size: 31px;
	cursor: pointer;
	display: flex;
	align-items: center;
	margin-bottom: 1%;
 }

 .accordion-content {
	/*display: none; */
	color: white;
	margin: 0%;
	padding-left: 11%;
	height: 0px;
	transition: height 0.5s ease;
	overflow: hidden;
	display: flex;
	flex-direction: column;
 }


 .icon {
	width: 8.5%;
	margin-right: 17px;
 }

 .accordion-option {
	margin-bottom: 0.7%;
	text-decoration: none;
	font-size: 28px;
	color:#fff;
 }

 .accordion-option:active,.accordion-option:hover, .active {
	color: #FF00FF;
	font-family: "henriette-compressed", serif;
	font-size: 33px;
	font-style: italic;
 }



/* Results page */

.back-arrow {
	color: white;
	text-decoration: none;
	font-size: 150%;
}

.results-header {
	font-size: 40px;
	margin-bottom: 2%;
	position: relative;
}

.results-header::after {
	content: "";
	width: 320px;
	height: 1px;
	display: block;
	background: white;
	position: absolute;
	left: 0;
	bottom: 0;
	transform: translateY(100%);
 }

 .word-description-list {
	font-family: "henriette-compressed";
	font-style: italic;
	padding-left: 0px;
	margin-top: 1%;

 }

#word-results {
	font-size: 60px;
	list-style-type: none;
}

#word-results a {
	color: white;
	text-decoration: none;
}

.word-description-list {
	font-size: 30px;
	list-style-type: none;
}

.word-description-list > li {
	margin-bottom: 1%;
	color: #FF00FF;
}

.word-container {
	flex-direction: column;
	width: 100%;
	height: 100%;
}

#word-animation {
	width: 100%;
	height: 50%;
}


/* Word page */
.word-display {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	gap: 3%;
	align-items: center;
}

.word-info {
	padding-left: 4%;
	padding-top: 7%;
}

.word-header {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.word-info-item {
	margin-top: 0%;
	margin-bottom: 5%;
}

#word {
	margin-top: 0%;
	margin-bottom: 1%;
}

#word-definition {
	margin-top:1%;
}

#word-part-of-speech {
	font-size: 20px;
	padding-left: 1%;
	color:#FF00FF;
	margin-top: 0%;
	margin-bottom: 1%;
}

#word-timeseries {
	width:80% !important;
	height: 40% !important;
}

.animation-container {
	margin: auto;
	height: auto;
	/* width: 100%; */
	position: relative;
}


/* Main page grey out */
.unavailable {
	color: #414141;
}

.unavailable:hover {
	color: #414141;
	font-style: normal;
	font-weight: 400;
	font-family: CooperHewitt, serif;
	font-size: 30px;
}



/* Media queries */

/* Tablet */
@media screen and (width <= 768px) {

	/* Landing/general */
	h1 {
		font-size: 46px;
	}

	h2 {
		font-size: 24px;
	}

	p {
		font-size: 17px;
	}

	.content-container {
		flex-direction: column;
	}

	.page-section {
		width: 95%;
		margin-top: 7%;
		padding-left: 5%;
		padding-right: 5%;
	}

	.button-container {
		display: flex;
		justify-content: center;
		align-items: center;
		text-align: center;
		 margin-bottom: 20%;
	}

	/* Results */
	.results-header {
		margin-bottom: 1%;
	}

	.results {
		padding-left: 45%;
		position: relative;
	}

	#word-results li::before {
		content: "→";
		font-size: 24px;
		padding-right: 10px;
	}

	/* Words */
	.word-display {
		grid-template-columns: repeat(1, 1fr);
		gap: 1.5%;
	}

	.animation-container {
		width: 100%;
		height: 400px;
		padding-top: 3%;
		overflow: hidden;
		display: flex;
		justify-content: center;
		order: 1;
	}

	#word-animation {
		width: 300%;
		height: 100%;
		object-fit: cover;
		object-position: center;
		transform: translateY(30px);
	}

	.word-header {
		margin-top: 3%;
	}

	.word-info {
		padding-top: 0%;
		padding-left: 0%;
		padding-bottom: 7%;
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		order: 2;
	}

	.written-word-info,
	 .obscurity-graph {
		padding-left: 5%;
	}

}


/*Mobile*/
@media screen and (width <= 375px) {

	/* Landing/general */
	h1 {
		font-size: 28px;
	}

	h2 {
		font-size: 11px;
	}

	p {
		font-size: 13px;
	}

	.full-list-link {
		font-size: 14px;
	}

	.page-section {
		margin-bottom: 7%;
	}

	.landing-title {
		padding-top: 10%;
	}

	.accordion-header {
		font-size: 18px;
	}

	.accordion-option {
		font-size: 16px;
	}

	.accordion-option:active,.accordion-option:hover, .active {
		font-size: 20px;
	 }

	/* Results */
	.results-header {
		font-size: 22px;
		margin-bottom: 3%;
	 }

	 .results-header::after {
		width: 175px;
	 }

	.page-section h1:first-of-type {
			margin-top: 20%;
		}

	.word-description-list {
		font-size: 18px;
	 }

	 .results {
		padding-left: 35%;
	 }

	#word-results li {
		font-size: 26px;
		padding-bottom: 15%;
	}

	#word-results li::before {
		font-size: 14px;
	}

	/* Words */
	.animation-container {
		width: 100%;
		height: 300px;
		padding-top: 3%;
	}

	#word-animation {
		width: 300%;
		height: 100%;
		transform: translateY(20px);
	}

	.word-info {
		padding-right: 3%;
		padding-left: 3%;
		padding-bottom: 10%;
		grid-template-columns: repeat(1, 1fr);
	}

	.word-info-item {
		padding-bottom: 3%;
	}

	.word-info-item h2 {
		font-size: 16px;
	}

	#word-part-of-speech {
		font-size: 14px;
		padding-left: 2%;
	}

	#word-timeseries {
		width: 90% !important;
		height: 45% !important;
	}

}

